--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,12 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
 asyncio_mode = "auto"
+markers = [
+    "unit: Unit tests (fast, isolated)",
+    "integration: Integration tests (require running services)",
+    "e2e: End-to-end tests (full workflow)",
+    "slow: Slow running tests",
+]
 
 [tool.ruff]
 line-length = 100
