--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "mcp>=0.9.0",
     "chromadb>=0.4.22",
     "sentence-transformers>=2.3.0",
+    "httpx>=0.27.0",
+    "prompt-toolkit>=3.0.0",
 ]
 
 [project.optional-dependencies]
@@ -41,6 +43,7 @@ dev = [
 
 [project.scripts]
 a2ia = "a2ia.server:main"
+a2ia-cli = "a2ia.cli.interface:run_cli"
 
 [tool.setuptools.packages.find]
 where = ["."]
