--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "sentence-transformers>=2.3.0",
     "httpx>=0.27.0",
     "prompt-toolkit>=3.0.0",
+    "nest-asyncio>=1.6.0",
 ]
 
 [project.optional-dependencies]
